<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalActivity"
    android:orientation="vertical"
    android:background="@drawable/background_quizziz">

    <TextView
        android:id="@+id/textViewQuizzizChampionship"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/textViewQuizziz"
        android:fontFamily="@font/alfaslabone"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:textColor="#D20A0A"/>

    <TextView
        android:id="@+id/textViewYourScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/yourScoreTextView"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="50sp"
        android:fontFamily="@font/anton_regular_ufc"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textViewScoreUser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/userScore"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="50sp"
        android:fontFamily="@font/anton_regular_ufc"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ufcoctagon_recortada"
        app:shapeAppearanceOverlay="@style/CustomRoundedImage"
        app:strokeWidth="5dp"
        app:strokeColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <ImageButton
            android:id="@+id/imageButtonGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/google_logo"
            app:tint = "#ffffff"
            android:background="@drawable/box_white"
            android:padding="20dp"
            android:layout_margin="5dp"/>

        <ImageButton
            android:id="@+id/imageButtonGmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/gmail_logo"
            app:tint = "#ffffff"
            android:background="@drawable/box_white"
            android:padding="20dp"
            android:layout_margin="5dp"/>

        <ImageButton
            android:id="@+id/imageButtonPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/phone_logo"
            app:tint = "#ffffff"
            android:background="@drawable/box_white"
            android:padding="20dp"
            android:layout_margin="5dp"/>

        <ImageButton
            android:id="@+id/imageButtonWhatsapp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/whatsapp_logo"
            app:tint = "#ffffff"
            android:background="@drawable/box_white"
            android:padding="20dp"
            android:layout_margin="5dp"/>

    </LinearLayout>


</LinearLayout>